# PandaDock

./: .github_cleanup.md  .gitignore  .readthedocs.yaml  .readthedocs.yml  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  FINAL_REFACTORING_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  PDB_FIX_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  SCORING_DOCUMENTATION.md  __init__.py  compare_original_vs_generated.py  config.py  conftest.py  contributing.md  create_sample_pdb.py  gitignore.md  main.py  pyproject.toml  pytest-ci.ini  requirements-ci.txt  requirements-core.txt  requirements.txt  setup.py  simple_pose_analysis.py  simple_test.py  test_complete_workflow.py  test_fixes.py  test_pandadock_commands.sh  trace_atom_loss.py
.github/workflows/: Ppypi-release.yml  publish-test-pypi.yml  publish-to-pypi.yml  pypi-release.yml  python-package-CI.yml  python-package.yml  test.yml  testpypi.yml
basic_examples_scripts/: basic_docking.py  batch_screening_example.py  benchmark-script.py  example-gpu-docking.py
benchmarks/: BENCHMARK_SETUP_GUIDE.md  FOCUSED_DATASETS_GUIDE.md  README.md  RMSD_EXCELLENCE_GUIDE.md  analyze_benchmark_results.py  grid_center.csv  grid_centers.csv  pdbbind_benchmark.py  run_benchmark_examples.sh  run_rmsd_excellence.py  test_benchmark_system.py
benchmarks/comprehesive_benchmark/: benchmark_raw_data.csv  comprehensive_benchmark_report.md
benchmarks/comprehesive_benchmark_realdatasets/: comprehensive_benchmark_report.md
benchmarks/ensemble_benchmark/: benchmark_raw_data.csv  benchmark_results.json  comprehensive_benchmark_report.md
benchmarks/gaba_benchmark/: benchmark_ec50_validation.py  run_benchmark_subset.py  run_full_ec50_benchmark.py  test_benchmark_sample.py
benchmarks/metal_analysis_results/: metal_analysis_data.csv
benchmarks/metal_full_benchmark/: metal_analysis_data.csv  metal_analysis_report.md  metal_analysis_summary.json
benchmarks/pdbbind_results_50/: benchmark_results.csv  benchmark_summary.csv  benchmark_summary.json
benchmarks/publication_results_final/: benchmark_raw_data.csv
benchmarks/scripts/: README.md  comprehensive_benchmark.py  demo_benchmark.py  metal_benchmark.py  pdbbind_benchmark.py  pdbbind_comprehensive_benchmark.py  publication_benchmark.py  rmsd_detailed_analysis.py  rmsd_excellence_benchmark.py  simple_benchmark.py
debug_scripts/: analyze_molecular_geometry.py  analyze_poses.py  debug_ligand_parsing.py  demo_new_architecture.py  test_pocket_detection.py
demo_plots_output/: detailed_analysis_report.txt  pandadock_report.csv  pandadock_report.html  pandadock_report.json  pandamap_3d_ml_pose_1.html  pandamap_3d_ml_pose_24.html  pandamap_3d_ml_pose_3.html  pandamap_report_ml_pose_1.txt  pandamap_report_ml_pose_24.txt  pandamap_report_ml_pose_3.txt
demo_plots_output/poses/: all.ligands.sdf  pose_10_ml_pose_23.sdf  pose_1_ml_pose_1.sdf  pose_2_ml_pose_3.sdf  pose_3_ml_pose_24.sdf  pose_4_ml_pose_4.sdf  pose_5_ml_pose_25.sdf  pose_6_ml_pose_10.sdf  pose_7_ml_pose_6.sdf  pose_8_ml_pose_15.sdf  pose_9_ml_pose_0.sdf  poses_summary.csv
docking/: __init__.py  base_engine.py  flexible_docking.py  ga_engine.py  ml_engine.py  physics_engine.py  pose_filtering.py
docs/: CDOCKER_IMPLEMENTATION.md  COMMAND_LINE_PLOTTING_GUIDE.md  COMPREHENSIVE_PLOTTING_GUIDE.md  PANDADOCK_ALGORITHMS_WIKI.md  PANDAMAP_INTEGRATION_GUIDE.md  READTHEDOCS_SETUP.md  requirements.txt
docs/source/: conf.py  index.rst
example_scripts/: ligand.sdf
example_test/: O1.sdf  etom.sdf  prop.sdf
examples/: demo_comprehensive_plots.py  metal_docking_examples.py  scoring_function_analysis.py  test_comprehensive_plots.py  test_integrated_plots.py
io/: __init__.py
metal_analysis_results/: metal_analysis_report.md
pandadock/: __init__.py  __main__.py  advanced_search.py  analysis.py  batch_screening.py  config.py  flexible_residues.py  gpu_scoring.py  hybrid_manager.py  main.py  main.py.bak  main_integration.py  main_new.py  pandadock.py  parallel_search.py  physics.py  physics_backup.py  protein.py  reporting.bak.py  reporting.py  reporting_backup.py  reporting_integration.py  score_scaling.py  scoring.py  scoring_factory.py  search.py  unified_scoring.py  utils.py  validation.py  version.py
pandadock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pandadock/algorithms/: __init__.py  algorithm_factory.py  base_algorithm.py  genetic_algorithm.py  genetic_algorithm_enhanced.py  metal_docking.py  mmff_minimization.py  monte_carlo.py  pandadock_algorithm.py  random_search.py
pandadock/analysis/: __init__.py  binding_affinity.py  binding_mode_analyzer.py  energy_analyzer.py  interaction_analyzer.py  pose_clusterer.py  (+1 more)
plots/: docking_report.html  docking_results.txt
publication_results/: benchmark_raw_data.csv  benchmark_results.json  comprehensive_benchmark_report.md
publication_results_final/: benchmark_results.json
refactored_summaries/: BACKUP_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md
reports/: __init__.py  html_report.py
run/: ligand.sdf
scoring/: ml_rescorer.py  scoring_functions.py
streamlit_pandadock/: README.md  USAGE_GUIDE.md  app.py  requirements.txt  run.sh  test_app.py
test_binding_affinity/: binding_affinity_report.csv  binding_affinity_report.txt  detailed_docking_report.txt  docking_config.json  docking_report.txt  docking_scores.txt  results_detailed.csv  results_summary.json
test_for_pandadock/: S2.sdf  propofol.sdf
test_physics_binding/: binding_affinity_report.csv  binding_affinity_report.txt  detailed_docking_report.txt  docking_config.json  docking_report.txt  docking_scores.txt  results_detailed.csv  results_summary.json
tests/: batch_screening_example.py  commands.txt  pandadock_test_suite.sh  reference.sdf  test_algorithms.py  test_basic.py  test_complete_functionality.py  test_complete_functionality_extended.py  test_config.py  test_coverage_basic.py  test_imports.py  test_pdb_fix.py  test_protein.py  test_simple.py  test_suite.sh  test_unified_scoring.py
(+641 files in other folders)
